@@ -1,5 +1,9 @@
 2008-01-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* Window.pm (___reset_css): Typo fixed.
+
+2008-01-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* CSSStyleDeclaration.pm: The classes now explicitly implement
 	the |CSS2Properties| interface.
 	(@{}, TIEARRAY, FETCH, FETCHSIZE, EXISTS, item, length): Implemented.
